# LibreCAD

./: .gitignore  .gitmodules  CMakeLists.txt  README.org  common.pri  librecad.pro  settings.cmake
libraries/: CMakeLists.txt
libraries/jwwlib/: CMakeLists.txt
libraries/jwwlib/src/: dl_attributes.h  dl_jww.cpp  dl_writer.h  jwtype.h
libraries/libdxfrw/: CMakeLists.txt  libdxfrw.pro
libraries/libdxfrw/src/: drw_base.cpp  drw_base.h  drw_classes.cpp  drw_classes.h  drw_dbg_base.h  drw_entities.cpp  drw_entities.h  drw_header.cpp  drw_header.h  drw_interface.h  drw_objects.cpp  drw_objects.h  libdwgr.cpp  libdwgr.h  libdxfrw.cpp  libdxfrw.h
libraries/libdxfrw/src/intern/: drw_dbg.cpp  drw_dbg.h  drw_textcodec.cpp  drw_textcodec.h  dwgbuffer.cpp  dwgbuffer.h  dwgreader.cpp  dwgreader.h  dwgreader15.cpp  dwgreader18.cpp  dwgreader18.h  dwgreader21.cpp  dwgreader21.h  dwgreader24.cpp  dwgreader24.h  dwgreader27.cpp  dwgreader27.h  dwgutil.cpp  dwgutil.h  dxfreader.cpp  dxfwriter.cpp  dxfwriter.h  rscodec.cpp
libraries/muparser/: CMakeLists.txt  muparser.pro
libraries/muparser/include/: muParserCallback.h
libraries/muparser/src/: muParserBase.cpp
librecad/src/: CMakeLists.txt  boost.cmake  src.pro
librecad/src/actions/: lc_actiondrawcircle2pr.cpp  lc_actiondrawlinepolygon3.cpp  lc_actiondrawsplinepoints.cpp  lc_actiondrawsplinepoints.h  lc_actionfileexportmakercam.cpp  lc_actionlayerstoggleconstruction.cpp  rs_actionblocksadd.cpp  rs_actionblocksattributes.cpp  rs_actionblockscreate.cpp  rs_actionblocksedit.cpp  rs_actionblocksexplode.cpp  rs_actionblocksfreezeall.cpp  rs_actionblocksinsert.cpp  rs_actionblocksremove.cpp  rs_actionblockssave.cpp  rs_actionblockstoggleview.cpp  rs_actiondefault.cpp  rs_actiondimaligned.cpp  rs_actiondimangular.cpp  rs_actiondimdiametric.cpp  rs_actiondimension.cpp  rs_actiondimleader.cpp  rs_actiondimlinear.cpp  rs_actiondimradial.cpp  rs_actiondrawarc.cpp  rs_actiondrawarc3p.cpp  rs_actiondrawarctangential.cpp  rs_actiondrawcircle.cpp  rs_actiondrawcircle2p.cpp  rs_actiondrawcircle3p.cpp  rs_actiondrawcirclecr.cpp  rs_actiondrawcirclecr.h  rs_actiondrawcircleinscribe.cpp  rs_actiondrawcircletan1_2p.cpp  rs_actiondrawcircletan2.cpp  rs_actiondrawcircletan2_1p.cpp  rs_actiondrawcircletan3.cpp  rs_actiondrawcircletan3.h  rs_actiondrawellipse4points.cpp  rs_actiondrawellipseaxis.cpp  (+102 more)
librecad/src/cmd/: rs_commands.cpp  rs_commands.h
librecad/src/lib/actions/: RS_SnapMode.cpp  RS_SnapMode.h  rs_actioninterface.cpp  rs_actioninterface.h  rs_preview.cpp  rs_preview.h  rs_previewactioninterface.cpp  rs_previewactioninterface.h  rs_snapper.cpp  rs_snapper.h
librecad/src/lib/creation/: rs_creation.cpp  rs_creation.h
librecad/src/lib/debug/: rs_debug.cpp  rs_debug.h
librecad/src/lib/engine/: lc_hyperbola.cpp  lc_hyperbola.h  lc_rect.cpp  lc_rect.h  lc_splinepoints.cpp  lc_splinepoints.h  lc_undosection.cpp  lc_undosection.h  rs.cpp  rs.h  rs_arc.cpp  rs_arc.h  rs_atomicentity.cpp  rs_atomicentity.h  rs_block.cpp  rs_block.h  rs_blocklist.cpp  rs_blocklist.h  rs_blocklistlistener.h  rs_circle.cpp  rs_circle.h  rs_clipboard.cpp  rs_clipboard.h  rs_color.cpp  rs_color.h  rs_constructionline.cpp  rs_constructionline.h  rs_dimaligned.cpp  rs_dimaligned.h  rs_dimangular.cpp  rs_dimangular.h  rs_dimdiametric.cpp  rs_dimdiametric.h  rs_dimension.cpp  rs_dimension.h  rs_dimlinear.cpp  rs_dimlinear.h  rs_dimradial.cpp  rs_dimradial.h  rs_document.cpp  (+72 more)
librecad/src/lib/fileio/: rs_fileio.cpp  rs_fileio.h
librecad/src/lib/filters/: rs_filtercxf.cpp  rs_filtercxf.h  rs_filterdxf.cpp  rs_filterdxf1.cpp  rs_filterdxf1.h  rs_filterdxfrw.cpp  rs_filterdxfrw.h  rs_filterjww.cpp  rs_filterlff.cpp  rs_filterlff.h
librecad/src/lib/generators/: lc_makercamsvg.cpp
librecad/src/lib/gui/: rs_dialogfactory.h  rs_dialogfactoryadapter.h  rs_dialogfactoryinterface.h  rs_eventhandler.cpp  rs_eventhandler.h  rs_graphicview.cpp  rs_graphicview.h  rs_grid.cpp  rs_painterqt.cpp
librecad/src/main/: ConvertLine.cpp  ConvertLine.h  DocumentPluginImplementation.cpp  DocumentPluginImplementation.h  PluginEntity.cpp  PluginEntity.h  doc_plugin_interface.h  lc_application.cpp  lc_application.h  main.cpp  main.h  mainwindowx.cpp  mainwindowx.h  qc_applicationwindow.cpp  qc_applicationwindow.h  qc_mdiwindow.cpp  qc_mdiwindow.h
librecad/src/plugins/: document_interface.h  qc_plugininterface.h
librecad/src/test/: lc_simpletests.cpp  lc_simpletests.h  rs_creation_test.cpp  rs_filterdxfrw_test.cpp  test.cpp
librecad/src/ui/: lc_actionfactory.cpp  lc_actionfactory.h  lc_actiongroupmanager.cpp  lc_actiongroupmanager.h  lc_deviceoptions.cpp  lc_widgetfactory.cpp  lc_widgetfactory.h  qg_actionhandler.cpp  qg_actionhandler.h  qg_blockwidget.cpp  qg_blockwidget.h  qg_colorbox.cpp  qg_commandedit.cpp  qg_commandedit.h  qg_commandhistory.cpp  qg_dialogfactory.cpp  qg_dialogfactory.h  qg_filedialog.h  qg_fontbox.cpp  qg_fontbox.h  qg_graphicview.cpp  qg_graphicview.h  qg_layerbox.cpp  qg_layerbox.h  qg_layerwidget.cpp  qg_layerwidget.h  qg_librarywidget.cpp  qg_librarywidget.h  qg_linetypebox.cpp  qg_patternbox.cpp  qg_pentoolbar.cpp  qg_pentoolbar.h  qg_recentfiles.cpp  qg_scrollbar.cpp  qg_widthbox.cpp
plugins/: CMakeLists.txt
plugins/align/: CMakeLists.txt  align.cpp  align.h
plugins/asciifile/: CMakeLists.txt  asciifile.cpp  asciifile.h  dibPunto.cpp  dibPunto.h  dpt.h  imgLabel.cpp  imgLabel.h  pointBox.cpp  pointBox.h  pointData.cpp  pointData.h  textBox.cpp  textBox.h
plugins/divide/: CMakeLists.txt  divide.cpp  divide.h  dividedlg.cpp  dividedlg.h
plugins/gear/: CMakeLists.txt  gear.cpp  gear.h
plugins/importshp/: CMakeLists.txt  importshp.cpp  importshp.h
plugins/importshp/shapelib/: safileio.c
plugins/list/: CMakeLists.txt  list.cpp  list.h
plugins/picfile/: CMakeLists.txt  picfile.cpp  picfile.h
plugins/plotequation/: CMakeLists.txt  plot.cpp  plot.h  plotdialog.cpp
plugins/sameprop/: CMakeLists.txt  sameprop.cpp  sameprop.h
plugins/sample/: CMakeLists.txt  sample.cpp  sample.h
tools/: CMakeLists.txt
tools/ttf2lff/: CMakeLists.txt
(+108 files in other folders)
