find_package(freetype QUIET)
if (UNIX)
    if (freetype_FOUND)
        add_subdirectory(ttf2lff)
        message(STATUS "package freetype2 is found. Building ttf2lff")
    else (freetype_FOUND)
        message(STATUS "package freetype2 is not found. Ignoring ttf2lff")
    endif (freetype_FOUND)
endif (UNIX)

if (WIN32)
    if (DEFINED ENV{FREETYPE_DIR})
        add_subdirectory(ttf2lff)
        message(STATUS "FREETYPE_DIR is set in the environment, building ttf2lff")
    else ()
        if (not "${FREETYPE_DIR}" STREQUAL "")
            # Is it set in custom.pro?
            add_subdirectory(ttf2lff)
            message(STATUS "FREETYPE_DIR is set in custom.pro, building ttf2lff")
        else ()
            message("${FREETYPE_DIR}")
            message( STATUS "FREETYPE_DIR is not set, ignoring ttf2lff")
        endif ()
    endif ()
endif (WIN32)